--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -272,8 +272,8 @@
             32 - Camera
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
-         config to 7. -->
-    <integer name="config_deviceHardwareKeys">71</integer>
+         config to 7. 
+    <integer name="config_deviceHardwareKeys">71</integer>-->
 
     <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
@@ -327,26 +327,26 @@
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveNotificationLed">true</bool>
 
-    <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveBatteryLed">true</bool>
+    <!-- Is the battery LED intrusive? Used to decide if there should be a disable option 
+    <bool name="config_intrusiveBatteryLed">true</bool>-->
 
     <!-- Do the battery/notification LEDs support pulsing?
-         Used to decide if we show pulse settings -->
-    <bool name="config_ledCanPulse">false</bool>
+         Used to decide if we show pulse settings
+    <bool name="config_ledCanPulse">false</bool>-->
 
     <!-- Does the notification LED support multiple colors?
-         Used to decide if the user can change the colors -->
-    <bool name="config_multiColorNotificationLed">true</bool>
+         Used to decide if the user can change the colors
+    <bool name="config_multiColorNotificationLed">true</bool>-->
 
-    <!-- Does the battery LED support multiple colors? Used to decide if the user can change the colors -->
+    <!-- Does the battery LED support multiple colors? Used to decide if the user can change the colors
     <bool name="config_multiColorBatteryLed">true</bool>
 
-    <!-- Default color for notification LED is white. -->
+    Default color for notification LED is white. 
     <color name="config_defaultNotificationColor">#ffffffff</color>
 
-    <!-- Default LED on time for notification LED in milliseconds. -->
+    Default LED on time for notification LED in milliseconds. 
     <integer name="config_defaultNotificationLedOn">1000</integer>
 
-    <!-- Default LED off time for notification LED in milliseconds. -->
-    <integer name="config_defaultNotificationLedOff">9000</integer>
+    Default LED off time for notification LED in milliseconds.
+    <integer name="config_defaultNotificationLedOff">9000</integer> -->
 </resources>
